--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     height: 100vh;
+}
+
+.outer-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
+}
+
+.input {
+    border: 1px solid black
 }
 
 .wrapper {
@@ -18,10 +26,7 @@ body {
     text-transform: uppercase;
     font-weight: 900;
     color: black;
-    position: absolute;
-    left: 50%;
-    top: 30px;
-    transform: translateX(-50%);
+    letter-spacing: 0.2em;
 }
 
 .wrapper>img {
